# uno_game

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
api/: Cargo.toml
api/src/: handlers.rs  index.html  main.rs  main3.rs  oldmain.rs  server.rs  session.rs
app/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
app/src/: App.svelte  Header.svelte  socket.js  socket.ts  styles.css  tailwind.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/routes/: 404.svelte  Game.svelte  Home_page.svelte
app/src/routes/all_cards/: +page.svelte
app/src/routes/deck1/: Arrow_block.svelte  Fours.svelte  back.svelte
app/src/routes/deck2/: +page.svelte  Number_card.svelte
app/src/routes/minimal/: Arrow_block.svelte  Back.svelte  Colored_card.svelte  Fours.svelte  Number_card.svelte  back.svelte
fastify_api/: index.js  index.ts  package.json  pnpm-lock.yaml
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  Counter.svelte  Header.svelte  store.ts  styles.css
src/routes/game/: +page.svelte
src/routes/game/all_cards/: +page.svelte
src/routes/game/deck1/: +page.svelte  Arrow_block.svelte  Colored_card.svelte  Fours.svelte  Number_card.svelte  back.svelte  number_card..svelte
src/routes/game/deck2/: +page.svelte  Arrow_block.svelte  Colored_card.svelte  Fours.svelte  Number_card.svelte  back.svelte
src/routes/game/minimal/: +page.svelte  Arrow_block.svelte  Colored_card.svelte  Fours.svelte  Number_card.svelte  back.svelte
