[package]
name = "api"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# npx nodemon --watch src -e rs --exec cargo run
[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
tokio = { version = "1.26.0", features = ["full"] }
uuid = "1.3.0"
