[package]
name = "api"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "main"
path = "src/main.rs"





# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# npx nodemon --watch src -e rs --exec cargo run
[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
uuid = "1.3.0"
env_logger = "0.10.0"